<resources>
    <string name="app_name">MeusEstudosAndroid</string>

    <!-- OnClick-->
    <string name="txt_app_name_on_click">Seja Bem-Vindo ao App Numero I</string>
    <string name="txt_info_on_click">Para Comerçarmos bem, clique no botão abaixo para gerar nosso primeiro Hello World</string>
    <string name="btn_click_on_click">Clique Aqui</string>
    <string name="txt_resultado_on_click">E então assim surge o nosso primeiro HELLO WORLD!</string>

    <!-- OnClickListener-->
    <string name="txt_app_name_on_click_listener">OnClickListener Metod</string>
    <string name="txt_click_after_on_click_listener">Antes do Botão ser clicado</string>
    <string name="txt_click_before_on_click_listener">Depois do Botão ser clicado</string>
    <string name="btn_click_on_click_listener">Clique Aqui</string>
    <string name="txt_new_title_on_click_listener">Novo Metodo de Click</string>

    <!-- SplashScreen Básica -->
    <string name="txt_description_logo_splash">Iguana em cima de uma pedra com o nome estudios iguana</string>

    <!-- Background Color-->
    <string name="txt_bg_color_vermelho">Vermelho</string>
    <string name="txt_bg_color_verde">Verde</string>
    <string name="txt_bg_color_roxo">Roxo</string>

    <!-- Intent Básica Tuto Easy -->
    <string name="txt_intent_basica">Bem Vindo a Tela Inicial</string>
    <string name="btn_intent_basica">Proxima Tela</string>

    <!-- Image Button -->
    <string name="txt_contador_img_btn">Contador = 0 </string>
    <string name="txt_soma_img_btn">Somar</string>
    <string name="txt_subtrair_img_btn">Subtrair</string>

    <!-- Audio-->
    <string name="btn_play">Play</string>

    <!-- Toast-->
    <string name="btn_toast">Gerar Pequena Mensagem</string>

    <!-- Love Calculator - Calculadora do Amor-->
    <string name="edt_homem">Homem</string>
    <string name="edt_mulher">Mulher</string>
    <string name="btn_calcular">Calcular</string>
</resources>